tests/baselines/reference/DateTimeFormatAndNumberFormatES2021.errors.txt
DateTimeFormatAndNumberFormatES2021.ts(1,29): error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
DateTimeFormatAndNumberFormatES2021.ts(4,25): error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
DateTimeFormatAndNumberFormatES2021.ts(5,25): error TS2551: Property 'formatRangeToParts' does not exist on type 'NumberFormat'. Did you mean 'formatToParts'?


==== DateTimeFormatAndNumberFormatES2021.ts (3 errors) ====
    Intl.NumberFormat.prototype.formatRange
                                ~~~~~~~~~~~
!!! error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
    Intl.DateTimeFormat.prototype.formatRange
    
    new Intl.NumberFormat().formatRange 
                            ~~~~~~~~~~~
!!! error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
    new Intl.NumberFormat().formatRangeToParts
                            ~~~~~~~~~~~~~~~~~~
!!! error TS2551: Property 'formatRangeToParts' does not exist on type 'NumberFormat'. Did you mean 'formatToParts'?
!!! related TS2728 lib.es2018.intl.d.ts:--:--: 'formatToParts' is declared here.
    new Intl.DateTimeFormat().formatRange
    new Intl.DateTimeFormat().formatRangeToParts